# ComfyUI-NS-PromptList

./: .gitignore  README.md  README_jp.md  __init__.py  prompt_list_node.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
web/: ns_promptlist.js
yaml/: Template_negative.yaml  Template_positive.yaml  free.yaml  prompt.yaml
