[project]
name = "comfyui-NS-promptlist"
description = "CustomNode to manage prompts in YAML format."
version = "2.0.0"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/NakamuraShippo/ComfyUI-NS-PromptList"

[tool.comfy]
PublisherId = "nakamurashippo"
DisplayName = "ComfyUI-NS-PromptList"
Icon = ""
